<resources>
    <string name="device_not_connect">device not connect</string>
    <string name="end_transaction">ICC transaction end</string>
    <string name="select_app_start">please select app</string>
    <string name="select_app_end">select app end, position = </string>
    <string name="emv_configured">emv is configured</string>
    <string name="emv_not_configured">emv is not configured</string>
    <string name="communicate_test">Communication Command Test</string>
    <string name="result">Result is :</string>
    <string name="test_led">LED Test</string>
    <string name="test_led_start">LED Test Start</string>
    <string name="test_led_end">LED Test End</string>
    <string name="test_led_red">Red LED Test</string>
    <string name="test_led_yel">Yellow LED Test</string>
    <string name="test_led_blu">Blue LED Test</string>
    <string name="test_led_green">Green LED Test</string>
    <string name="test_buzzer_start">Buzzer Test Start</string>
    <string name="test_buzzer_end">Buzzer Test End</string>
    <string name="icc_test">ICC Test</string>
    <string name="mcr_test">MCR Test</string>
    <string name="nfc_test">NFC Test</string>
    <string name="psam_test">PSAM Test</string>
    <string name="hardware_check">POS Self Test</string>
    <string name="get_version">Get Version</string>
    <string name="msg_pls_insert_card">Please insert card</string>
    <string name="msg_pls_swipe_card">Please swipe card</string>
    <string name="msg_pls_tap_card">Please tap card</string>
    <string name="test_command">Communication Test Command</string>
    <string name="msg_select_device">Click here to scan and connect device</string>
    <string name="msg_do_trade">Click here to start do trade after finish connected</string>
    <string name="msg_disconnect">Click here to disConnected device</string>
    <string name="msg_conn_usb">Click here to find and connect usb</string>
    <string name="device_info">Device Info</string>
    <string name="device_update">Device Update</string>
    <string name="device_operate">Device Operate</string>
    <string name="device_other">Other</string>
    <string name="title_audio">Audio</string>
    <string name="title_uart">Uart</string>
    <string name="title_blu">Bluetooth</string>
    <string name="title_ble">Ble Bluetooth</string>
    <string name="title_welcome">Dspread Pos</string>
    <string name="msg_allowed_location_permission">Location permission is on</string>
    <string name="msg_not_allowed_loaction_permission">Location permission is forbidden, related map functions are not available</string>
    <string name="refreshing">Refreshing</string>
    <string name="audio_open">audio control:open</string>
    <string name="audio_close">audio control:close</string>
    <string name="audio_unknow">audio control:unknown</string>
    <string name="get_pin">Get Pin</string>
    <string name="update">update</string>
    <string name="do_tradelog_operation">TradeLog Operation</string>
    <string name="get_update_key">get_update_key</string>
    <string name="reset_qpos">qpos reset</string>
    <string name="menu_update">qpos update</string>
    <string name="set_sleepMode_time">set sleep mode time</string>
    <string name="input_pin">Please input pin now.</string>
    <string name="swipe_card">Please swipe card now.</string>
    <string name="setBuzzer">setBuzzer</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="getQuickEmvStatus">get Quick Emv Status</string>
    <string name="setQuickEmvStatus">set Quick Emv Status</string>
    <string name="updateEMVByXml">update EMV By Xml</string>
    <string name="audio">Audio</string>
    <string name="serial_port">Serial port</string>
    <string name="normal_bluetooth">Normal Blutooth</string>
    <string name="other_blu">BLE Blutooth</string>
    <string name="updateEMV">update EMV</string>
    <string name="updateEMVRID">update EMV RID</string>
    <string name="updateIPEK">update IPEK</string>
    <string name="serialport">Serial Port</string>
    <string name="mac_error">MAC ERROR</string>
    <string name="cmd_timeout">CMD TIMEOUT</string>
    <string name="pinKsn">pinKsn:</string>
    <string name="trackksn">trackksn:</string>
    <string name="pinBlock">pinBlock:</string>
    <string name="posId">posId:</string>
    <string name="get_pos_id">Get PosID</string>
    <string name="operate_mafire">Operate Mafire Cards</string>
    <string name="inject_key_remote">Remote key Loading API</string>
    <string name="getting_pos_id">Getting POS ID…</string>
    <string name="isCardExist">check card in slot</string>
    <string name="card_is_exist">card is exist</string>
    <string name="card_is_not_exist">card is not exist</string>
    <string name="scan_bt_device">scan device</string>
    <string name="scan_usb_device">usb device</string>
    <string name="text_quick_emv">update quick emv config</string>
    <string name="getId">getPosId</string>
    <string name="text_quick_emv_trade">do quick emv transaction</string>
    <string name="poll_card">poll card</string>
    <string name="verify_card">verify card</string>
    <string name="read_card">read card</string>
    <string name="operate_card">operate card</string>
    <string name="write_card">write card</string>
    <string name="transfer_card">Transceive APDU</string>
    <string name="finish_card">finish mafire card</string>
    <string name="please_select_bt_name">select device</string>
    <string name="open_serial_port">open serial port</string>
    <string name="scan_bt_pos_error">no paired bluetooth device\nplease pair bluetooth device first</string>
    <string name="connecting_bt_pos">connecting\nPlease wait…</string>
    <string name="app_name">Thunder Pay</string>
    <string name="waiting_for_card">Please insert/swipe/tap card now.</string>
    <string name="no_card_detected">No card detected. Please insert or swipe card again and press check card.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC)</string>
    <string name="bad_swipe">Tarjeta no detectada por banda magnética</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_removed">Tarjeta removida</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="uid">UID:</string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="card_data">Card Data: </string>
    <string name="do_emv_trade_fail">Start EMV failed</string>
    <string name="do_emv_trade_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery ADC: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Set Amount</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="enter_pin_try">Please enter PIN (Last %s try)</string>
    <string name="online_process_requested">Online process requested.</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Please select app</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transaction_approved">Approved</string>
    <string name="transaction_terminated">Tarjeta removida</string>
    <string name="transaction_declined">Declined</string>
    <string name="transaction_cancel">Operación cancelada</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_app_fail">Fail (App fail)</string>
    <string name="transaction_device_error">Pos Error</string>
    <string name="tlv_list">TLV List:\n</string>
    <string name="advice_process">Advice Process.</string>
    <string name="call_your_bank">Please call your bank</string>
    <string name="request_terminal_time">Request Terminal Time. Replied </string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="amount">Amount</string>
    <string name="amount_ok">Amount OK?</string>
    <string name="approved">Approved</string>
    <string name="cancel_or_enter">Cancel or Enter</string>
    <string name="card_error">Card error</string>
    <string name="declined">Declined</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="common_accept">Aceptar</string>
    <string name="wmx_connection_test_final_modal_title">La última transacción se ha verificado correctamente</string>
    <string name="wmx_connection_test_final_modal_subtitle">Puedes consultar el historial para ver la información a detalle</string>
    <string name="wmx_transaction_history_check_title">Respuesta no obtenida correctamente</string>
    <string name="wmx_transaction_history_check_description">Parece que hubo un problema de conexión y la respuesta no fue obtenida correctamente. Puedes consultar si la transacción fue procesada en el historial.</string>
    <string name="wmx_go_to_history">Ir a historial</string>
    <string name="wmx_not_network_connection_title">Tu terminal no esta conectado a internet</string>
    <string name="wmx_not_network_connection_subtitle">Para solucionarlo:</string>
    <string name="wmx_not_network_connection_footer_2">Remueve la tarjeta SIM y vuelve a insertarla</string>
    <string name="wmx_not_network_connection_option_1">Revisa que los datos móviles de tu terminal se encuentren activados</string>
    <string name="wmx_not_network_connection_option_2">Intenta conectarte a alguna red Wi Fi</string>
    <string name="wmx_not_network_connection_option_3">Prueba activando el modo avión y espera un minuto para desactivarlo</string>
    <string name="wmx_not_network_connection_option_4">Apaga tu dispositivo y espera unos minutos antes de volver a encenderlo</string>
    <string name="wmx_not_network_connection_test">Realizar prueba de conexión</string>
</resources>