<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="37px"
        android:paddingTop="28px"
        android:paddingBottom="28px"
        android:paddingRight="37px"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/efevoo_i_check_exito" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24px"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            android:text="@string/wmx_connection_test_final_modal_title"
            android:textColor="#0F0F0F"
            android:textSize="22px" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/dm_sans"
            android:gravity="center"
            android:text="@string/wmx_connection_test_final_modal_subtitle"
            android:textColor="#5A5A5A"
            android:textSize="22px" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connection_test_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#B9E0AB"
            android:fontFamily="@font/dm_sans_bold"
            android:stateListAnimator="@null"
            android:text="@string/common_accept"
            android:textAllCaps="false"
            android:textColor="#4AAC38"
            android:textSize="22px" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>