<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/lyt_not_connection_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="37px"
        android:paddingTop="28px"
        android:paddingBottom="28px"
        android:paddingRight="37px"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/m_informaci_n" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24px"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            android:text="@string/wmx_not_network_connection_title"
            android:textColor="#0F0F0F"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#E9EDED"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            >

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/wmx_not_network_connection_subtitle"
                android:textAlignment="viewStart"
                android:textColor="#5A5A5A"
                android:textSize="18dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/round_button_black" />

                    <TextView
                        android:id="@+id/txt_connection_option_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wmx_not_network_connection_option_1"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/round_button_black" />

                    <TextView
                        android:id="@+id/txt_connection_option_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wmx_not_network_connection_option_2"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/round_button_black" />

                    <TextView
                        android:id="@+id/txt_connection_option_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wmx_not_network_connection_option_3"
                        android:textColor="#000000"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/round_button_black"/>

                    <TextView
                        android:id="@+id/txt_connection_option_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wmx_not_network_connection_option_4"
                        android:textColor="#000000" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            >

            <TextView
                android:id="@+id/txt_connection_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/wmx_not_network_connection_footer_2"
                android:gravity="center"/>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_not_network_connection_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@color/ep_btn_continuar_fondo"
            android:fontFamily="@font/dm_sans_bold"
            android:stateListAnimator="@null"
            android:text="@string/wmx_not_network_connection_test"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="30px" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_not_network_close"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/transparent"
            android:fontFamily="@font/dm_sans_bold"
            android:stateListAnimator="@null"
            android:text="Cancelar"
            android:textAllCaps="false"
            android:textColor="@color/secundary_color"
            android:textSize="30px" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>